# GetMyCarforCLI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/getmycar/: cache.py  config.py  display.py  exceptions.py  favorites.py  filters.py  logging.py  main.py  parser.py  scraper.py  session.py  utils.py
tests/: test_cache.py  test_config.py  test_display.py  test_e2e.py  test_exceptions.py  test_favorites.py  test_filters.py  test_foundation.py  test_logging.py  test_main.py  test_parser.py  test_scraper.py  test_smoke.py
tests/fixtures/: carsensor_detail.html  carsensor_search.html  detail.html  search_results.html
