[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmycar"
version = "0.0.1"
description = "Carsensor scraping CLI for Windows PowerShell"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "drumsuko1113" }]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
]

[project.scripts]
getmycar = "getmycar.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/getmycar"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
