[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmycar"
version = "0.0.1"
description = "Carsensor scraping CLI for Windows PowerShell"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "drumsuko1113" }]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "questionary>=2.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "responses>=0.25",
    "types-requests",
    "freezegun>=1.4",
]

[project.scripts]
getmycar = "getmycar.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/getmycar"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["questionary.*", "bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/getmycar"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
